pp2/samples/tested/matrix.decaf.test

*** Error line 92.
    SparseItem elem;
               ^^^^
*** syntax error

